examples/rate-route-header.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rates-header
spec:
  parentRefs:
  - name: my-hotel
    sectionName: http
  rules:
  - backendRefs:
    - name: rate-canary
      kind: Service
      port: 8090
    matches:
    - headers:
      - type: Exact
        name: env
        value: canary
  - backendRefs:
    - name: rate-preprod
      kind: Service
      port: 8090
    matches:
    - headers:
      - type: Exact
        name: env
        value: preprod
